tests/ui/parse_missing_name.stderr
error: tests/ui/parse_missing_name.ql:1:4: expected function name
  fn (value: Int) -> Int {
     ^
