tests/ui/parse_missing_name.ql
fn (value: Int) -> Int {
    return value
}
